{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 26,
  "lineage": "d248ab52-c844-c383-9b49-c09edf6f868d",
  "resources": [
    {
      "module": "module.dev_network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d4b5ddbfd5db9fd8",
            "domain": "vpc",
            "id": "eipalloc-0d4b5ddbfd5db9fd8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-219-174-219.compute-1.amazonaws.com",
            "public_ip": "3.219.174.219",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.dev_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905638264028:internet-gateway/igw-0c5c6615c183cc9f5",
            "id": "igw-0c5c6615c183cc9f5",
            "owner_id": "905638264028",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0a27478611baa68af"
          },
          "dependencies": [
            "module.dev_network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_network",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905638264028:loadbalancer/app/tf-lb-20230718132451765500000004/e2671e0655445c68",
            "arn_suffix": "app/tf-lb-20230718132451765500000004/e2671e0655445c68",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20230718132451765500000004-1326409980.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:905638264028:loadbalancer/app/tf-lb-20230718132451765500000004/e2671e0655445c68",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20230718132451765500000004",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0912996fb05136d37"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0552e423ca47c8d37"
              },
              {
                "subnet_id": "subnet-06c43e8a805a09e01"
              }
            ],
            "subnets": [
              "subnet-0552e423ca47c8d37",
              "subnet-06c43e8a805a09e01"
            ],
            "tags": {
              "Name": "alb"
            },
            "tags_all": {
              "Name": "alb"
            },
            "vpc_id": "vpc-0a27478611baa68af",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.dev_network.aws_security_group.web_sg",
            "module.dev_network.aws_subnet.my_public_subnet",
            "module.dev_network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_network",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905638264028:listener/app/tf-lb-20230718132451765500000004/e2671e0655445c68/bde2fd9e0e191820",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905638264028:listener/app/tf-lb-20230718132451765500000004/e2671e0655445c68/bde2fd9e0e191820",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:905638264028:loadbalancer/app/tf-lb-20230718132451765500000004/e2671e0655445c68",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_network.aws_lb.alb",
            "module.dev_network.aws_security_group.web_sg",
            "module.dev_network.aws_subnet.my_public_subnet",
            "module.dev_network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d4b5ddbfd5db9fd8",
            "association_id": "eipassoc-01a99fa7fdb26d541",
            "connectivity_type": "public",
            "id": "nat-0aef22c91b675bb8a",
            "network_interface_id": "eni-04a7bf294bf1b987e",
            "private_ip": "10.0.1.161",
            "public_ip": "3.219.174.219",
            "subnet_id": "subnet-0552e423ca47c8d37"
          },
          "dependencies": [
            "module.dev_network.aws_eip.nat_gateway",
            "module.dev_network.aws_subnet.my_public_subnet",
            "module.dev_network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routeTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905638264028:route-table/rtb-0825e5f25d0f4f4fc",
            "id": "rtb-0825e5f25d0f4f4fc",
            "owner_id": "905638264028",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0aef22c91b675bb8a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-rt"
            },
            "tags_all": {
              "Name": "dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a27478611baa68af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_network.aws_eip.nat_gateway",
            "module.dev_network.aws_nat_gateway.nat_gateway",
            "module.dev_network.aws_subnet.my_public_subnet",
            "module.dev_network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_routeTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905638264028:route-table/rtb-0166ff0818169148e",
            "id": "rtb-0166ff0818169148e",
            "owner_id": "905638264028",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c5c6615c183cc9f5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt"
            },
            "tags_all": {
              "Name": "dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a27478611baa68af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_network.aws_internet_gateway.my_igw",
            "module.dev_network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059478d9c62211a61",
            "route_table_id": "rtb-0825e5f25d0f4f4fc",
            "subnet_id": "subnet-0d665e43b8ec4b1b0"
          },
          "dependencies": [
            "module.dev_network.aws_eip.nat_gateway",
            "module.dev_network.aws_nat_gateway.nat_gateway",
            "module.dev_network.aws_route_table.private_routeTable",
            "module.dev_network.aws_subnet.my_private_subnet",
            "module.dev_network.aws_subnet.my_public_subnet",
            "module.dev_network.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064aba516dd8bd939",
            "route_table_id": "rtb-0825e5f25d0f4f4fc",
            "subnet_id": "subnet-0e4b9bfeb9b9e82bd"
          },
          "dependencies": [
            "module.dev_network.aws_eip.nat_gateway",
            "module.dev_network.aws_nat_gateway.nat_gateway",
            "module.dev_network.aws_route_table.private_routeTable",
            "module.dev_network.aws_subnet.my_private_subnet",
            "module.dev_network.aws_subnet.my_public_subnet",
            "module.dev_network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c7427b825031bf5",
            "route_table_id": "rtb-0166ff0818169148e",
            "subnet_id": "subnet-0552e423ca47c8d37"
          },
          "dependencies": [
            "module.dev_network.aws_internet_gateway.my_igw",
            "module.dev_network.aws_route_table.public_routeTable",
            "module.dev_network.aws_subnet.my_public_subnet",
            "module.dev_network.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f2aaf9b26bcfc5a",
            "route_table_id": "rtb-0166ff0818169148e",
            "subnet_id": "subnet-06c43e8a805a09e01"
          },
          "dependencies": [
            "module.dev_network.aws_internet_gateway.my_igw",
            "module.dev_network.aws_route_table.public_routeTable",
            "module.dev_network.aws_subnet.my_public_subnet",
            "module.dev_network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905638264028:security-group/sg-0912996fb05136d37",
            "description": "Web security group",
            "egress": [],
            "id": "sg-0912996fb05136d37",
            "ingress": [],
            "name": "terraform-20230718132447460800000001",
            "name_prefix": "terraform-",
            "owner_id": "905638264028",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "sg"
            },
            "tags_all": {
              "name": "sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a27478611baa68af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1510911944",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0912996fb05136d37",
            "security_group_rule_id": "sgr-04c586587af7b3f92",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_network.aws_security_group.web_sg",
            "module.dev_network.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3157011980",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0912996fb05136d37",
            "security_group_rule_id": "sgr-0e2fd4385c7bf3b69",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_network.aws_security_group.web_sg",
            "module.dev_network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-401041273",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0912996fb05136d37",
            "security_group_rule_id": "sgr-00500ce6bbb9568dd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_network.aws_security_group.web_sg",
            "module.dev_network.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2332574545",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0912996fb05136d37",
            "security_group_rule_id": "sgr-06b3d5fd211392a72",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_network.aws_security_group.web_sg",
            "module.dev_network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905638264028:subnet/subnet-0d665e43b8ec4b1b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d665e43b8ec4b1b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905638264028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-1"
            },
            "tags_all": {
              "Name": "dev-subnet-1"
            },
            "vpc_id": "vpc-0a27478611baa68af"
          },
          "dependencies": [
            "module.dev_network.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905638264028:subnet/subnet-0e4b9bfeb9b9e82bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4b9bfeb9b9e82bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905638264028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-2"
            },
            "tags_all": {
              "Name": "dev-subnet-2"
            },
            "vpc_id": "vpc-0a27478611baa68af"
          },
          "dependencies": [
            "module.dev_network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905638264028:subnet/subnet-0552e423ca47c8d37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0552e423ca47c8d37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905638264028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-subnet-1"
            },
            "tags_all": {
              "Name": "dev-public-subnet-1"
            },
            "vpc_id": "vpc-0a27478611baa68af"
          },
          "dependencies": [
            "module.dev_network.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905638264028:subnet/subnet-06c43e8a805a09e01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c43e8a805a09e01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905638264028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-subnet-2"
            },
            "tags_all": {
              "Name": "dev-public-subnet-2"
            },
            "vpc_id": "vpc-0a27478611baa68af"
          },
          "dependencies": [
            "module.dev_network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905638264028:vpc/vpc-0a27478611baa68af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0792aa7668c258383",
            "default_route_table_id": "rtb-01b1644ffc6d020dc",
            "default_security_group_id": "sg-0c0c918f0f5430c8f",
            "dhcp_options_id": "dopt-04ec471c621ddbbea",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a27478611baa68af",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01b1644ffc6d020dc",
            "owner_id": "905638264028",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}